Arreglando errores en updateDatosCliente de SqlServerBDAccess

--- a/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
+++ b/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
@@ -270,11 +270,11 @@
                         break;
 
                     default:
-                        let p = document.createElement('p');
-                        p.setAttribute('style', 'color:red;');
-                        p.appendChild(document.createTextNode(respuestaServer.mesaje));
+                        let p2 = document.createElement('p');
+                        p2.setAttribute('style', 'color:red;');
+                        p2.appendChild(document.createTextNode(respuestaServer.mesaje));
 
-                        document.getElementById('mensajeServer').appendChild(p);
+                        document.getElementById('mensajeServer').appendChild(p2);
                         break;
 
                 }
