cambios en InicioPanel

--- a/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
+++ b/AgapeaDAM/Views/Cliente/InicioPanel.cshtml
@@ -238,7 +238,7 @@
     });
 
     document.getElementById('botonUploadImage').addEventListener('click', function (ev) {
-        window.alert('a subir la imagen al server por AJAX');
+        window.alert('La imagen se subira al servidor para almacenarna por AJAX');
 
         // contenido a mandar al servidor : base 64 del fichero y fichero fisico
         let datos = new FormData();
