No se que cojones pasa, pero al darle a alguna categoria de libros, me dice que la pagina no existe

--- a/AgapeaDAM/Views/Shared/_Layout.cshtml
+++ b/AgapeaDAM/Views/Shared/_Layout.cshtml
@@ -106,11 +106,10 @@
                         @{
                             foreach (Categoria item in categoriasRaiz)
                             {
-
                                 <a asp-asp-controller="Tienda"
-                       asp-action="recuperaLibros"
-                       asp-asp-all-route-data="@(new Dictionary<String, String>{{"id", item.IdCategoria}})"
-                       class="list-group-item list-group-item-action border border-end-0 border-start-0 text-dark">@item.NombreCategoria</a>
+                                asp-action="RecuperaLibros"
+                                asp-asp-all-route-data="@(new Dictionary<String, String>{{"id", item.IdCategoria}})"
+                                class="list-group-item list-group-item-action border border-end-0 border-start-0 text-dark">@item.NombreCategoria</a>
                             }
                         }
 
